@@ -1303,27 +1303,35 @@ operator|.
 name|currentTimeMillis
 argument_list|()
 decl_stmt|;
-assert|assert
-operator|(
+if|if
+condition|(
 name|regionidx
-operator|==
+operator|!=
 name|regionsToMove
 operator|.
 name|size
 argument_list|()
-operator|)
-operator|:
-literal|"clusterState="
-operator|+
-name|clusterState
-operator|+
-literal|", regionidx="
+operator|||
+name|neededRegions
+operator|!=
+literal|0
+condition|)
+block|{
+comment|// Emit data so can diagnose how balancer went astray.
+name|LOG
+operator|.
+name|warn
+argument_list|(
+literal|"regionidx="
 operator|+
 name|regionidx
 operator|+
 literal|", regionsToMove="
 operator|+
 name|regionsToMove
+operator|.
+name|size
+argument_list|()
 operator|+
 literal|", numServers="
 operator|+
@@ -1336,14 +1344,99 @@ operator|+
 literal|", serversUnderloaded="
 operator|+
 name|serversUnderloaded
-assert|;
-assert|assert
-operator|(
-name|neededRegions
-operator|==
+argument_list|)
+expr_stmt|;
+name|StringBuilder
+name|sb
+init|=
+operator|new
+name|StringBuilder
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|Map
+operator|.
+name|Entry
+argument_list|<
+name|HServerInfo
+argument_list|,
+name|List
+argument_list|<
+name|HRegionInfo
+argument_list|>
+argument_list|>
+name|e
+range|:
+name|clusterState
+operator|.
+name|entrySet
+argument_list|()
+control|)
+block|{
+if|if
+condition|(
+name|sb
+operator|.
+name|length
+argument_list|()
+operator|>
 literal|0
-operator|)
-assert|;
+condition|)
+name|sb
+operator|.
+name|append
+argument_list|(
+literal|", "
+argument_list|)
+expr_stmt|;
+name|sb
+operator|.
+name|append
+argument_list|(
+name|e
+operator|.
+name|getKey
+argument_list|()
+operator|.
+name|getServerName
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|sb
+operator|.
+name|append
+argument_list|(
+literal|" "
+argument_list|)
+expr_stmt|;
+name|sb
+operator|.
+name|append
+argument_list|(
+name|e
+operator|.
+name|getValue
+argument_list|()
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+name|LOG
+operator|.
+name|warn
+argument_list|(
+literal|"Input "
+operator|+
+name|sb
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 comment|// All done!
 name|LOG
 operator|.
@@ -2565,12 +2658,22 @@ operator|)
 operator|+
 literal|", dest="
 operator|+
+operator|(
+name|this
+operator|.
+name|dest
+operator|==
+literal|null
+condition|?
+literal|""
+else|:
 name|this
 operator|.
 name|dest
 operator|.
 name|getServerName
 argument_list|()
+operator|)
 return|;
 block|}
 block|}
